<resources>

    <!-- TODO
    	переименовать лого
    	иконки
    	перевод на русский (и инструкция на английском)
    	большое лого для маркета
    	скриншоты для маркета
    
     -->
    <string name="app_name">Battery 100% Discharger</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="toast_not_rooted">Device Not Rooted</string>
    <string name="toast_b8">Success Supply Controller Reset. Now reboot device</string>
    <string name="toast_08">Success Registers Reset. Now reboot device</string>
    <string name="toast_reboot">Success Rebooting</string>
    <string name="toast_error">Error</string>
    
    <string name="about_dialog_title">Instructions</string>
    <string name="about_dialog_message">
<![CDATA[ 
 Приложение призвано исправить проблему с зависшим на 100% уровнем индикатора батареи 
 (проблема характерна для некоторых устройств <b>Ainol</b>)   
    <p>
	&#8226;<font color="blue">Получите root-права.</font><br>
	&#8226;Рекомендуется разрядить устройство почти до минимума.<br>
	&#8226;Выполните <b>сброс контроллера питания</b>.<br>
	&#8226;Перезагрузите планшет.<br>
	&#8226;Индикатор заряда батареи покажет уровень заряда 5&#37;.<br>
	&#8226;Подключите зарядное устройство и зарядите планшет полностью.<br>    
	&#8226;ТОЛЬКО если починить индикатор заряда аккумулятора методом, 
	описанным выше, не удалось,	выполните <b>обнуление регистров</b>.
  <h3> Сброс контроллера питания </h3> 
   Последовательно выполняются команды:
  <p>
  <i>echo B8 > /sys/devices/i2c-2/2-0034/axp20_reg </i><br>
  <i>echo B820 > /sys/devices/i2c-2/2-0034/axp20_reg</i><br>
  <p>  
  Драйвер управления   электропитанием выставляет регистры 
  чипа AXP202 через виртуальный <i>axp20_reg</i> файл.<br>    
  <b>echo B8</b> только выбирает регистр <i>0xB8</i>, 
  так, чтобы последующее чтение <i>axp20_reg</i> возвратило значение 
  регистра. Т.е. строка  <b>echo B8</b> в принципе не обязательна. 
  <br>
  <b>echo B820</b>  выбирает регистр <i>0xB8</i> и пишет 
  значение 0x20. Это устанавливает бит 5 в 1, а все другие биты в 0. 
  Согласно спецификации, это очистит счетчики чипа, 
  которые используются драйвером для вычисления уровня батареи.  
  <h3> Обнуление регистров </h3> 
  <b><font color="red">Следует применять, только если предыдущий метод не помог.</font></b><br>
  Последовательно выполняются команды:
  <p>
  <i>echo 08 > /sys/devices/i2c-2/2-0034/axp20_reg </i><br>
  <i>echo 0800 > /sys/devices/i2c-2/2-0034/axp20_reg</i>
  <p>
  Дополнительная команда <b>0800</b> запишет значение <i>0x00</i> 
  в регистр <i>0x08</i>. Спецификация говорит, что регистры от 
  <i>0x04</i> до <i>0x0F</i> являются кэшем. Значения в нем будут сохранены 
  между завершениями работы и перезагрузками, 
  пока у AXP202 есть даже малейший бит AC или питания от батареи. 
  ]]>
    </string>
    
    <string name="b8_dialog_title">Reset Supply Controller</string>
    <string name="b8_dialog_message"> <![CDATA[
	   The following commands will be executed:
	  <p>
	  <i>echo B8 > /sys/devices/i2c-2/2-0034/axp20_reg </i><br>
	  <i>echo B820 > /sys/devices/i2c-2/2-0034/axp20_reg</i><br>
	  <p>  
	  Do you wish to continue?       
        ]]>
    </string>
    <string name="_08_dialog_title">Reset Driver Registers</string>
    <string name="_08_dialog_message"><![CDATA[
      The following commands will be executed:
	  <p>
	  <i>echo 08 > /sys/devices/i2c-2/2-0034/axp20_reg </i><br>
	  <i>echo 0800 > /sys/devices/i2c-2/2-0034/axp20_reg</i><br>
	  <p>  
	  Do you wish to continue?       
        ]]>
    </string>
    <string name="reboot_dialog_title">Reboot Device</string>
    <string name="reboot_dialog_message"><![CDATA[
        Do you wish to continue?         
        ]]>
    </string>
    <string name="check_box_text">Controller Reset doesn\'t help</string>
    <string name="btn_instructions_text">Instructions</string>
    <string name="btn_b8_text">Reset Supply Controller</string>
    <string name="btn_08_text">Reset Driver Registers</string>
    <string name="btn_reboot_text">Reboot</string>
    <string name="btn_close">Close</string>

</resources>